# Tetris

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  conanfile.txt
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
includes/: SDLEngine.h  SDL_engine.h  bag.h  cloneable.h  color.h  engine.h  game.h  igame.h  menu.h  menu_command.h  menu_commands.h  menu_options.h  menu_pause.h  options.h  score_lvl.h  square_matrix.h  tetris.h  tetris_drawer.h  tetris_drawer_rect.h  tetris_renderer.h  tetris_renderer_rect.h  tetromino.h  tetromino_factory.h  tetromino_sdl.h  texture.h  title_screen.h  well.h  well_sdl.h
sources/: SDLEngine.cpp  SDL_engine.cpp  bag.cpp  game.cpp  main.cpp  menu.cpp  menu_commands.cpp  menu_options.cpp  menu_pause.cpp  score_lvl.cpp  tetris.cpp  tetris_drawer_rect.cpp  tetris_renderer_rect.cpp  tetromino_sdl.cpp  texture.cpp  title_screen.cpp  well.cpp  well_sdl.cpp
src/: game.cpp  main.cpp
test/: CMakeLists.txt
test/sources/: bag_test.cpp  main.cpp  matrix_test.cpp  source_lvl_test.cpp  tetromino_test.cpp  well_test.cpp
